--- a/css/main.css
+++ b/css/main.css
@@ -1700,7 +1700,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #091162;
+  background: #4b141d;
 }
 .links-of-blogroll {
   font-size: 13px;
